[package]
name = "l_blink"
version = "0.1.0"
authors = ["Yuki Toyoda <toyoda_yuki@cyberagent.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.2"
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.3"
panic-halt = "0.2.0"
stm32f4xx-hal = {version="0.7.0", features=["stm32f407"]}